# rero-site

./: .env  .gitignore  pyproject.toml  test.py
app/: __main__.py  constants.py  models.py  server.py  utils.py
app/robot/: esp_line_follower.py
app/routers/: submission.py
frontend/: astro.config.mjs  bun.lockb  package.json  tailwind.config.cjs
frontend/src/: env.d.ts
frontend/src/components/: CodeLogs.jsx  FileUpload.jsx  FileUpload.tsx  Navbar.astro  SubmissionList.jsx
frontend/src/firebasestuff/: client.ts
frontend/src/layouts/: Layout.astro
frontend/src/middleware/: index.js
frontend/src/pages/: dashboard.astro  index.astro  register.astro  signin.astro
frontend/src/pages/api/auth/: register.ts  signin.ts
frontend/src/pages/robots/[name]/: code.astro  index.astro
frontend/src/styles/: base.css
robot_code/ESPLF/: dummy_server.py  esp-wifi.ino  pratham.py  tcp_socket.py  test.py
socket_server/: __main__.py
submissions/ESPLF/snowzilla/T3x92kX9wIOmuUw5inKv/: T3x92kX9wIOmuUw5inKv.py
task_manager/: tasks.py  testing.py  utils.py
test/: __main__.py  esp_line_follower.py  firestore_test.py  motor_file.py  pratham.py
